--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit-platform.version>5.3.1</junit-platform.version>
+        <lombok-version>1.18.16</lombok-version>
     </properties>
 
     <dependencies>
@@ -55,6 +56,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-platform.version}</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok-version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
